--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,48 @@
+/*
+  10. Create a root stacking context
+*/
+#root,
+#__next {
+  isolation: isolate;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+  width: 100%;
 }
 
 .card {
-  padding: 2em;
+  /* padding: 1rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
+}
+
+.card-text {
+  font-size: 1.5rem;
+  background-color: rgba(255, 255, 255, 0.674);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.card-container {
+  display: grid;
+  /* grid-template-columns: repeat(auto-fill, minmax(100px, 200px)); */
+  grid-template-columns: repeat(4, minmax(100px, 200px));
+  gap: 1rem;
+  place-content: center;
+  grid-auto-flow: row dense;
 }
 
 .read-the-docs {
