--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
   background-color: rgba(255, 255, 255, 0.75);
   border-radius: 12px;
   border: 1px solid rgba(209, 213, 219, 0.3);
+  cursor: pointer;
 }
 
 .card-text {
