--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 .card-container {
   display: grid;
   /* grid-template-columns: repeat(auto-fill, minmax(100px, 200px)); */
-  grid-template-columns: repeat(4, minmax(100px, 200px));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 200px));
   gap: 1rem;
   place-content: center;
   grid-auto-flow: row dense;
