--- a/src/App.css
+++ b/src/App.css
@@ -7,20 +7,38 @@
 }
 
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 3rem;
+  align-items: center;
+}
+
+#root > * {
+  padding: 2rem;
+  width: 100%;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 1280px;
+  width: 100%;
+}
+
+.header-wrapper {
+  width: 100%;
+
+  background-color: rgb(217 217 223);
+  box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.75);
+
+  justify-items: center;
 }
 
 .scoreboard {
@@ -31,11 +49,6 @@ header {
 }
 
 .card {
-  /* padding: 1rem;
-  border: 1px solid black;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column; */
   display: flex;
   flex-direction: column;
   backdrop-filter: blur(16px) saturate(180%);
@@ -47,21 +60,26 @@ header {
 }
 
 .card-text {
-  font-size: 1.5rem;
   background-color: rgba(255, 255, 255, 0.674);
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .card-container {
+  max-width: 1280px;
   display: grid;
-  /* grid-template-columns: repeat(auto-fill, minmax(100px, 200px)); */
-  grid-template-columns: repeat(auto-fit, minmax(100px, 200px));
-  gap: 1rem;
-  place-content: center;
-  grid-auto-flow: row dense;
+  grid-template-columns: repeat(4, 0.25fr);
+  grid-auto-flow: row;
+  gap: 1.5rem;
+  padding: 2.5rem;
 }
 
-.read-the-docs {
-  color: #888;
+@media (max-width: 750px) {
+  .card-container {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    padding: 1rem;
+    gap: 1.5rem;
+  }
 }
