--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 
 /* 2. Remove default margin */
@@ -98,10 +98,23 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   background-color: rgb(80, 154, 156);
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-size: cover;
+  background-position: top;
+  background-image: url("./assets/pokemon_pic.jpg");
+  filter: brightness(0.6);
 }
 
 h1 {
