--- a/src/App.css
+++ b/src/App.css
@@ -55,16 +55,25 @@ header {
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgba(255, 255, 255, 0.75);
   border-radius: 12px;
-  border: 1px solid rgba(209, 213, 219, 0.3);
+  /* border: 1px solid rgba(209, 213, 219, 0.3); */
   cursor: pointer;
+  transition: transform 0.2s ease-out;
+  box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.6);
+}
+
+.card:hover {
+  transform: scale(1.1);
 }
 
 .card-text {
   background-color: rgba(255, 255, 255, 0.674);
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
   text-transform: uppercase;
   font-weight: bold;
+  padding: 0.5rem 0;
 }
 
 .card-container {
