--- a/src/App.css
+++ b/src/App.css
@@ -63,8 +63,10 @@ header {
   -moz-box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.6);
 }
 
-.card:hover {
-  transform: scale(1.1);
+@media (hover: hover) {
+  .card:hover {
+    transform: scale(1.1);
+  }
 }
 
 .card-text {
