--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ header {
 .card {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgba(255, 255, 255, 0.75);
